--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.4.0",
     "axios": "^0.19.0",
+    "gh-pages": "^2.1.1",
     "lodash": "^4.17.15",
     "material-ui": "^0.20.2",
     "react": "^16.9.0",
@@ -24,7 +25,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "homepage": "https://github.com/KG-original/movie-app"
   },
   "eslintConfig": {
     "extends": "react-app"
