--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "movie-app",
   "version": "0.1.0",
   "private": true,
+  "homepage":"https://github.com/KG-original/movie-app",
   "dependencies": {
     "@material-ui/core": "^4.4.0",
     "axios": "^0.19.0",
@@ -27,8 +28,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "homepage": "https://github.com/KG-original/movie-app"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
